YAPIS/4lr/generated/ExprParser.py
# Generated from ExprParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "ExprParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'node'", "'graph'", "'arc'", "'nodes'", 
                     "'arcs'", "'int'", "'for'", "'while'", "'if'", "'else'", 
                     "'switch'", "'case'", "'break'", "'return'", "'continue'", 
                     "'function'", "'+'", "'-'", "'/'", "'&'", "'*'", "'and'", 
                     "'or'", "'not'", "'='", "','", "';'", "':'", "'!'", 
                     "'['", "']'", "'<'", "'>'", "'('", "')'", "'{'", "'}'", 
                     "'depth_first_search'", "'breadth_first_search'", "'shortest_path'" ]

    symbolicNames = [ "<INVALID>", "NODE", "GRAPH", "ARC", "N_ELEM", "A_ELEM", 
                      "TYPE_INT", "FOR", "WHILE", "IF", "ELSE", "SWITCH", 
                      "CASE", "BREAK", "RETURN", "CONTINUE", "FUNCTION", 
                      "UNION", "DIFF", "SYMDIFF", "INTERSEC", "CART", "AND", 
                      "OR", "NOT", "EQ", "COMMA", "SEMI", "COLON", "EXCLAM", 
                      "LSQUARE", "RSQUARE", "LANGLE", "RANGLE", "LPAREN", 
                      "RPAREN", "LCURLY", "RCURLY", "DEPTH_FIRST_SEARCH", 
                      "BREADTH_FIRST_SEARCH", "SHORTEST_PATH", "INT", "ID", 
                      "WS" ]

    RULE_types = 0
    RULE_operation = 1
    RULE_anoun = 2
    RULE_node = 3
    RULE_arc = 4
    RULE_program = 5
    RULE_stat = 6
    RULE_def = 7
    RULE_expr = 8
    RULE_cicle = 9
    RULE_condition = 10
    RULE_or_func = 11
    RULE_func = 12

    ruleNames =  [ "types", "operation", "anoun", "node", "arc", "program", 
                   "stat", "def", "expr", "cicle", "condition", "or_func", 
                   "func" ]

    EOF = Token.EOF
    NODE=1
    GRAPH=2
    ARC=3
    N_ELEM=4
    A_ELEM=5
    TYPE_INT=6
    FOR=7
    WHILE=8
    IF=9
    ELSE=10
    SWITCH=11
    CASE=12
    BREAK=13
    RETURN=14
    CONTINUE=15
    FUNCTION=16
    UNION=17
    DIFF=18
    SYMDIFF=19
    INTERSEC=20
    CART=21
    AND=22
    OR=23
    NOT=24
    EQ=25
    COMMA=26
    SEMI=27
    COLON=28
    EXCLAM=29
    LSQUARE=30
    RSQUARE=31
    LANGLE=32
    RANGLE=33
    LPAREN=34
    RPAREN=35
    LCURLY=36
    RCURLY=37
    DEPTH_FIRST_SEARCH=38
    BREADTH_FIRST_SEARCH=39
    SHORTEST_PATH=40
    INT=41
    ID=42
    WS=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NODE(self):
            return self.getToken(ExprParser.NODE, 0)

        def ARC(self):
            return self.getToken(ExprParser.ARC, 0)

        def GRAPH(self):
            return self.getToken(ExprParser.GRAPH, 0)

        def TYPE_INT(self):
            return self.getToken(ExprParser.TYPE_INT, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypes" ):
                listener.enterTypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypes" ):
                listener.exitTypes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes" ):
                return visitor.visitTypes(self)
            else:
                return visitor.visitChildren(self)




    def types(self):

        localctx = ExprParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 78) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNION(self):
            return self.getToken(ExprParser.UNION, 0)

        def DIFF(self):
            return self.getToken(ExprParser.DIFF, 0)

        def SYMDIFF(self):
            return self.getToken(ExprParser.SYMDIFF, 0)

        def INTERSEC(self):
            return self.getToken(ExprParser.INTERSEC, 0)

        def CART(self):
            return self.getToken(ExprParser.CART, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperation" ):
                listener.enterOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperation" ):
                listener.exitOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperation" ):
                return visitor.visitOperation(self)
            else:
                return visitor.visitChildren(self)




    def operation(self):

        localctx = ExprParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_operation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4063232) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnounContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(ExprParser.TypesContext,0)


        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def TYPE_INT(self):
            return self.getToken(ExprParser.TYPE_INT, 0)

        def EQ(self):
            return self.getToken(ExprParser.EQ, 0)

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def GRAPH(self):
            return self.getToken(ExprParser.GRAPH, 0)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def ARC(self):
            return self.getToken(ExprParser.ARC, 0)

        def LANGLE(self):
            return self.getToken(ExprParser.LANGLE, 0)

        def node(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.NodeContext)
            else:
                return self.getTypedRuleContext(ExprParser.NodeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMMA)
            else:
                return self.getToken(ExprParser.COMMA, i)

        def RANGLE(self):
            return self.getToken(ExprParser.RANGLE, 0)

        def LSQUARE(self):
            return self.getToken(ExprParser.LSQUARE, 0)

        def N_ELEM(self):
            return self.getToken(ExprParser.N_ELEM, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COLON)
            else:
                return self.getToken(ExprParser.COLON, i)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.LPAREN)
            else:
                return self.getToken(ExprParser.LPAREN, i)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.RPAREN)
            else:
                return self.getToken(ExprParser.RPAREN, i)

        def A_ELEM(self):
            return self.getToken(ExprParser.A_ELEM, 0)

        def arc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ArcContext)
            else:
                return self.getTypedRuleContext(ExprParser.ArcContext,i)


        def RSQUARE(self):
            return self.getToken(ExprParser.RSQUARE, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_anoun

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnoun" ):
                listener.enterAnoun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnoun" ):
                listener.exitAnoun(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnoun" ):
                return visitor.visitAnoun(self)
            else:
                return visitor.visitChildren(self)




    def anoun(self):

        localctx = ExprParser.AnounContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_anoun)
        self._la = 0 # Token type
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.types()
                self.state = 31
                self.match(ExprParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.match(ExprParser.TYPE_INT)
                self.state = 34
                self.match(ExprParser.ID)
                self.state = 35
                self.match(ExprParser.EQ)
                self.state = 36
                self.match(ExprParser.INT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 37
                self.match(ExprParser.GRAPH)
                self.state = 38
                self.match(ExprParser.ID)
                self.state = 39
                self.match(ExprParser.EQ)
                self.state = 40
                self.expr(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 41
                self.match(ExprParser.ARC)
                self.state = 42
                self.match(ExprParser.ID)
                self.state = 43
                self.match(ExprParser.EQ)
                self.state = 44
                self.match(ExprParser.LANGLE)
                self.state = 45
                self.node()
                self.state = 46
                self.match(ExprParser.COMMA)
                self.state = 47
                self.node()
                self.state = 48
                self.match(ExprParser.RANGLE)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.match(ExprParser.GRAPH)
                self.state = 51
                self.match(ExprParser.ID)
                self.state = 52
                self.match(ExprParser.EQ)
                self.state = 53
                self.match(ExprParser.LSQUARE)
                self.state = 54
                self.match(ExprParser.N_ELEM)
                self.state = 55
                self.match(ExprParser.COLON)
                self.state = 56
                self.match(ExprParser.LPAREN)
                self.state = 57
                self.node()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==26:
                    self.state = 58
                    self.match(ExprParser.COMMA)
                    self.state = 59
                    self.node()
                    self.state = 64
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 65
                self.match(ExprParser.RPAREN)
                self.state = 66
                self.match(ExprParser.COMMA)
                self.state = 67
                self.match(ExprParser.A_ELEM)
                self.state = 68
                self.match(ExprParser.COLON)
                self.state = 69
                self.match(ExprParser.LPAREN)
                self.state = 70
                self.arc()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==26:
                    self.state = 71
                    self.match(ExprParser.COMMA)
                    self.state = 72
                    self.arc()
                    self.state = 77
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 78
                self.match(ExprParser.RPAREN)
                self.state = 79
                self.match(ExprParser.RSQUARE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode" ):
                listener.enterNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode" ):
                listener.exitNode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNode" ):
                return visitor.visitNode(self)
            else:
                return visitor.visitChildren(self)




    def node(self):

        localctx = ExprParser.NodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_node)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(ExprParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def ARC(self):
            return self.getToken(ExprParser.ARC, 0)

        def EQ(self):
            return self.getToken(ExprParser.EQ, 0)

        def LANGLE(self):
            return self.getToken(ExprParser.LANGLE, 0)

        def node(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.NodeContext)
            else:
                return self.getTypedRuleContext(ExprParser.NodeContext,i)


        def COMMA(self):
            return self.getToken(ExprParser.COMMA, 0)

        def RANGLE(self):
            return self.getToken(ExprParser.RANGLE, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_arc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArc" ):
                listener.enterArc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArc" ):
                listener.exitArc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArc" ):
                return visitor.visitArc(self)
            else:
                return visitor.visitChildren(self)




    def arc(self):

        localctx = ExprParser.ArcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arc)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(ExprParser.ID)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.match(ExprParser.ARC)
                self.state = 87
                self.match(ExprParser.ID)
                self.state = 88
                self.match(ExprParser.EQ)
                self.state = 89
                self.match(ExprParser.LANGLE)
                self.state = 90
                self.node()
                self.state = 91
                self.match(ExprParser.COMMA)
                self.state = 92
                self.node()
                self.state = 93
                self.match(ExprParser.RANGLE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatContext,i)


        def anoun(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.AnounContext)
            else:
                return self.getTypedRuleContext(ExprParser.AnounContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ExprParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8521232018382) != 0):
                self.state = 99
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 97
                    self.stat()
                    pass

                elif la_ == 2:
                    self.state = 98
                    self.anoun()
                    pass


                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def EQ(self):
            return self.getToken(ExprParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(ExprParser.SEMI, 0)

        def anoun(self):
            return self.getTypedRuleContext(ExprParser.AnounContext,0)


        def cicle(self):
            return self.getTypedRuleContext(ExprParser.CicleContext,0)


        def condition(self):
            return self.getTypedRuleContext(ExprParser.ConditionContext,0)


        def def_(self):
            return self.getTypedRuleContext(ExprParser.DefContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = ExprParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stat)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(ExprParser.ID)
                self.state = 107
                self.match(ExprParser.EQ)
                self.state = 108
                self.expr(0)
                self.state = 109
                self.match(ExprParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.expr(0)
                self.state = 112
                self.match(ExprParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.anoun()
                self.state = 115
                self.match(ExprParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 117
                self.cicle()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 118
                self.condition()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 119
                self.def_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(ExprParser.FUNCTION, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ID)
            else:
                return self.getToken(ExprParser.ID, i)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def LCURLY(self):
            return self.getToken(ExprParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(ExprParser.RCURLY, 0)

        def types(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.TypesContext)
            else:
                return self.getTypedRuleContext(ExprParser.TypesContext,i)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMMA)
            else:
                return self.getToken(ExprParser.COMMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDef" ):
                listener.enterDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDef" ):
                listener.exitDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDef" ):
                return visitor.visitDef(self)
            else:
                return visitor.visitChildren(self)




    def def_(self):

        localctx = ExprParser.DefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(ExprParser.FUNCTION)
            self.state = 123
            self.match(ExprParser.ID)
            self.state = 124
            self.match(ExprParser.LPAREN)

            self.state = 125
            self.types()
            self.state = 126
            self.match(ExprParser.ID)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 127
                self.match(ExprParser.COMMA)
                self.state = 128
                self.types()
                self.state = 129
                self.match(ExprParser.ID)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self.match(ExprParser.RPAREN)
            self.state = 137
            self.match(ExprParser.LCURLY)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8521232018382) != 0):
                self.state = 138
                self.stat()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(ExprParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func(self):
            return self.getTypedRuleContext(ExprParser.FuncContext,0)


        def NOT(self):
            return self.getToken(ExprParser.NOT, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def BREAK(self):
            return self.getToken(ExprParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(ExprParser.CONTINUE, 0)

        def RETURN(self):
            return self.getToken(ExprParser.RETURN, 0)

        def operation(self):
            return self.getTypedRuleContext(ExprParser.OperationContext,0)


        def AND(self):
            return self.getToken(ExprParser.AND, 0)

        def OR(self):
            return self.getToken(ExprParser.OR, 0)

        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.EQ)
            else:
                return self.getToken(ExprParser.EQ, i)

        def LANGLE(self):
            return self.getToken(ExprParser.LANGLE, 0)

        def RANGLE(self):
            return self.getToken(ExprParser.RANGLE, 0)

        def EXCLAM(self):
            return self.getToken(ExprParser.EXCLAM, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 147
                self.func()
                pass

            elif la_ == 2:
                self.state = 148
                self.match(ExprParser.NOT)
                self.state = 149
                self.expr(9)
                pass

            elif la_ == 3:
                self.state = 150
                self.match(ExprParser.ID)
                pass

            elif la_ == 4:
                self.state = 151
                self.match(ExprParser.INT)
                pass

            elif la_ == 5:
                self.state = 152
                self.match(ExprParser.BREAK)
                pass

            elif la_ == 6:
                self.state = 153
                self.match(ExprParser.CONTINUE)
                pass

            elif la_ == 7:
                self.state = 154
                self.match(ExprParser.RETURN)
                self.state = 155
                self.expr(1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 180
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 178
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = ExprParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 158
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 159
                        self.operation()
                        self.state = 160
                        self.expr(11)
                        pass

                    elif la_ == 2:
                        localctx = ExprParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 162
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 163
                        self.match(ExprParser.AND)
                        self.state = 164
                        self.expr(9)
                        pass

                    elif la_ == 3:
                        localctx = ExprParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 165
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 166
                        self.match(ExprParser.OR)
                        self.state = 167
                        self.expr(8)
                        pass

                    elif la_ == 4:
                        localctx = ExprParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 168
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 175
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [32, 33]:
                            self.state = 169
                            _la = self._input.LA(1)
                            if not(_la==32 or _la==33):
                                self._errHandler.recoverInline(self)
                            else:
                                self._errHandler.reportMatch(self)
                                self.consume()
                            self.state = 171
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if _la==25:
                                self.state = 170
                                self.match(ExprParser.EQ)


                            pass
                        elif token in [25, 29]:
                            self.state = 173
                            _la = self._input.LA(1)
                            if not(_la==25 or _la==29):
                                self._errHandler.recoverInline(self)
                            else:
                                self._errHandler.reportMatch(self)
                                self.consume()
                            self.state = 174
                            self.match(ExprParser.EQ)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 177
                        self.expr(7)
                        pass

             
                self.state = 182
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CicleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(ExprParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

